index.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
:root{
    --Very-dark-blue-main-background: hsl(233, 47%, 7%);
    --Dark-desaturated-blue-card-background: hsl(244, 38%, 16%);
    --Soft-violet-accent: hsl(277, 64%, 61%);
    --White : hsl(0, 0%, 100%);
    --Slightly-transparent-white-main-paragraph: hsla(0, 0%, 100%, 0.75);
    --Slightly-transparent-white-stat-headings: hsla(0, 0%, 100%, 0.6);
    --font-size: 15px;
}
body{
    background: var(--Very-dark-blue-main-background);
    display: grid;
    place-items: center;
    font-family: 'Inter', sans-serif;
}
.container{
    width: 100%;
    display: grid;
    place-items: center;
    height: 100vh;
}
.card{
    width: 700px;
    height: 280px;
    display: flex;
}
.image{
    width: 50%;
    height: 100%;
    background-image: linear-gradient( to right, rgba(145, 51, 204, 0.4), rgba(145, 51, 204, 0.4) ), url(./images/image-header-desktop.jpg);
    background-size: cover;
    background-position: top;
    border-radius: 0 10px 10px 0;
}
.info{
    width: 50%;
    color: var(--White);
    background: var(--Dark-desaturated-blue-card-background);
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 30px;
    border-radius: 10px 0px 0px 10px;
}
.text{
margin: 5px;
padding: 20px;
}
.info .text h1{
    font-size: 20px;
    font-weight: 700;
    text-align:left;
    margin: 0 0 15px 0;

}
.info h1 span{
    color: var(--Soft-violet-accent);
}
.info .text p{
    padding: 0 0 10px 0;
    font-size: 9px;
    font-weight: 100;
    line-height: 14px;
    word-spacing:2px;
    opacity: .8;
}
.data{
    display: flex;
    padding: 20px 60px 20px 20px ;
    width: 100%;
    justify-content: space-between;
}
.numbers h2{
    font-size: 15px;
    font-weight: 700;
    text-align: center;
}
.numbers p {
    font-size: 8px;
    font-weight: 100;
    letter-spacing: 1px;
    margin: 3px;
}
@media only screen and (max-width:400px) {
    .card{
        width: 90%;
        height: 80vh;
        flex-direction: column-reverse;
        justify-content: flex-end;
    }
    .image{
        width: 100%;
    height: 30%;
    background-image: linear-gradient( to right, rgba(145, 51, 204, 0.4), rgba(145, 51, 204, 0.4) ), url(../images/image-header-mobile.jpg);
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;
    border-radius: 10px 10px 0 0;
    }
    .info{
        width: 100%;
        height: 70%;
        border-radius: 0 0 10px 10px;
        padding: 10px;
    }
    .info .text h1,
    .info .text p{
        text-align: center;
    }
    .info .text p{
        font-size: 10px;
        line-height: 17px;
    }
    .data{
        height: 70%;
        flex-direction: column;
        align-items: center;
        padding: 0;
        margin: 10px;
    }
    .text{
        padding: 5px;
        margin: 5px 0;
    }
}

